--- a/bsamsung.html
+++ b/bsamsung.html
@@ -207,16 +207,14 @@ USB 3.2 Gen 2 Interface PCIe NVMe Technology Read Speeds up to 10</p>
     </div>
 
     <div class="footer-section">
-      <h3>TEAM</h3>
+      <h3>NAME</h3>
       <span>SAJID ALI</span>
-      <span>FAIZAN KTK</span>
-      <span>DANIYAL</span>
     </div>
 
     <div class="footer-section">
       <h3>Contact Us</h3>
-      <span>Email: oceangatelimited@gmail.com</span>
-      <span>Phone: +923456874322</span>
+      <span>Email: greatsajidali709@gmail.com</span>
+      <span>Phone: +92 3132541910</span>
     </div>
   </div>
   <span class="end">&copy; 2024 All Right Reserved</span>
