--- a/contact.html
+++ b/contact.html
@@ -74,30 +74,59 @@
   </nav> 
  <!-- Contact -->
 
-  <div class="form">
-    <h1>Contact US</h1>
-    <hr>
-    <form class="contact-form" action="#" method="post">
-      <div class="form-group">
-        <input type="text" id="name" name="name" placeholder="Name" required>
-      </div>
+ <div class="form">
+  <h1>Contact US</h1>
+  <hr>
+  <form class="contact-form" action="#" method="post" onsubmit="return validateForm()">
+    <div class="form-group">
+      <input type="text" id="name" name="name" placeholder="Name" required>
+    </div>
 
-      <div class="form-group">
-        <input type="email" id="email" name="email" placeholder="Email" required>
-      </div>
+    <div class="form-group">
+      <input type="email" id="email" name="email" placeholder="Email" required>
+    </div>
 
-      <div class="form-group">
-        <input type="text" id="subject" name="subject" placeholder="Subject" required>
-      </div>
+    <div class="form-group">
+      <input type="text" id="subject" name="subject" placeholder="Subject" required>
+    </div>
 
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="6" required></textarea>
-      </div>
+    <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="6" required></textarea>
+    </div>
 
-      <button type="submit" class="submit-btn">Submit</button>
-    </form>
-  </div>
+    <button type="submit" class="submit-btn">Submit</button>
+  </form>
+</div>
+
+<script>
+   function validateForm() {
+  var name = document.getElementById('name').value;
+  var email = document.getElementById('email').value;
+  var subject = document.getElementById('subject').value;
+  var message = document.getElementById('message').value;
+
+  if (!isText(name) || !isText(subject)) {
+    alert("Name and Subject should only contain text");
+    return false;
+  }
+
+  if (!isValidEmail(email)) {
+    alert("Please enter a valid Gmail address");
+    return false;
+  }
+
+  return true;
+}
+
+function isText(value) {
+  return /^[a-zA-Z\s]+$/.test(value);
+}
+
+function isValidEmail(email) {
+  return /^[a-zA-Z0-9._%+-]+@gmail\.com$/.test(email);
+}
+</script>
 
 <footer>
   <div class="footer-content">
@@ -107,16 +136,14 @@
     </div>
 
     <div class="footer-section">
-      <h3>TEAM</h3>
+      <h3>NAME</h3>
       <span>SAJID ALI</span>
-      <span>FAIZAN KTK</span>
-      <span>DANIYAL</span>
     </div>
 
     <div class="footer-section">
       <h3>Contact Us</h3>
-      <span>Email: oceangatelimited@gmail.com</span>
-      <span>Phone: +923456874322</span>
+      <span>Email: greatsajidali709@gmail.com</span>
+      <span>Phone: +92 3132541910</span>
     </div>
   </div>
   <span class="end">&copy; 2024 All Right Reserved</span>
