--- a/support.html
+++ b/support.html
@@ -85,7 +85,7 @@
 
       <div class="contact-info">
           <h3>Contact Information</h3>
-          <span>Email : sajix2608@gmail.com</span>
+          <span>Email : greatsajidali709@gmail.com</span>
           <br>
           <span>Phone : +92 3132541910</span>
       </div>
@@ -126,16 +126,14 @@
     </div>
 
     <div class="footer-section">
-      <h3>TEAM</h3>
+      <h3>NAME</h3>
       <span>SAJID ALI</span>
-      <span>FAIZAN KTK</span>
-      <span>DANIYAL</span>
     </div>
 
     <div class="footer-section">
       <h3>Contact Us</h3>
-      <span>Email: oceangatelimited@gmail.com</span>
-      <span>Phone: +923456874322</span>
+      <span>Email: greatsajidali709@gmail.com</span>
+      <span>Phone: +92 3132541910</span>
     </div>
   </div>
   <span class="end">&copy; 2024 All Right Reserved</span>
