--- a/signup.html
+++ b/signup.html
@@ -16,10 +16,10 @@
 
     <!-- Navbar Start -->
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2c2e3c;">
       <div class="container-fluid d-flex ">
        <div>
-          <a class="navbar-brand" href="#"><img src="./assets/logo.png" alt="" width="80px"></a>
+          <a class="navbar-brand" href="#"><img src="./assets/logo.jpg" alt="" width="60px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
        </div>
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-weight: bold;">
           <ul class="navbar-nav me-auto mb-2  mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html" style="color: rgb(0, 0, 0);">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html" style="color: white;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html" style="color: rgb(0, 0, 0);">Products</a>
+              <a class="nav-link" href="./products.html" style="color: white;">Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Category
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -44,7 +44,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Brands
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,26 +55,26 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./compare.html" style="color: rgb(0, 0, 0);">Compare</a>
+              <a class="nav-link" href="./compare.html" style="color: white;">Compare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html" style="color: rgb(0, 0, 0);">About Us</a>
+              <a class="nav-link" href="./about.html" style="color: white;">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./support.html" style="color: rgb(0, 0, 0);">Support</a>
+              <a class="nav-link" href="./support.html" style="color: white;">Support</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html" style="color: rgb(0, 0, 0);">Contact Us</a>
+              <a class="nav-link" href="./contact.html" style="color: white;">Contact Us</a>
             </li>
           </ul>
           <div>
-            <a href="./signup.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Sign up</button></a>
-              <a href="./login.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Login</button></a>
+            <a href="./signup.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Sign up</button></a>
+            <a href="./login.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Login</button></a>
               
           </div>
         </div>
       </div>
-    </nav> 
+    </nav>
 
     <!-- Signup -->
 
@@ -101,13 +101,13 @@
       </div>
 
       <div class="footer-section">
-        <h3>NAME</h3>
+        <h3>MADE BY</h3>
         <span>SAJID ALI</span>
       </div>
 
       <div class="footer-section">
         <h3>Contact Us</h3>
-        <span>Email: greatsajidali709@gmail.com</span>
+        <span>Email: greatsajidail709@gmail.com</span>
         <span>Phone: +92 3132541910</span>
       </div>
     </div>
