--- a/cram.html
+++ b/cram.html
@@ -15,10 +15,10 @@
 
     <!-- Navbar Start -->
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2c2e3c;">
       <div class="container-fluid d-flex ">
        <div>
-          <a class="navbar-brand" href="#"><img src="./assets/logo.png" alt="" width="80px"></a>
+          <a class="navbar-brand" href="#"><img src="./assets/logo.jpg" alt="" width="60px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
        </div>
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-weight: bold;">
           <ul class="navbar-nav me-auto mb-2  mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html" style="color: rgb(0, 0, 0);">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html" style="color: white;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html" style="color: rgb(0, 0, 0);">Products</a>
+              <a class="nav-link" href="./products.html" style="color: white;">Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Category
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -43,7 +43,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Brands
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -54,26 +54,26 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./compare.html" style="color: rgb(0, 0, 0);">Compare</a>
+              <a class="nav-link" href="./compare.html" style="color: white;">Compare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html" style="color: rgb(0, 0, 0);">About Us</a>
+              <a class="nav-link" href="./about.html" style="color: white;">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./support.html" style="color: rgb(0, 0, 0);">Support</a>
+              <a class="nav-link" href="./support.html" style="color: white;">Support</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html" style="color: rgb(0, 0, 0);">Contact Us</a>
+              <a class="nav-link" href="./contact.html" style="color: white;">Contact Us</a>
             </li>
           </ul>
           <div>
-            <a href="./signup.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Sign up</button></a>
-              <a href="./login.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Login</button></a>
+            <a href="./signup.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Sign up</button></a>
+            <a href="./login.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Login</button></a>
               
           </div>
         </div>
       </div>
-    </nav> 
+    </nav>
 
 <div class="cheading">
   <h1>RAM</h1>
@@ -81,22 +81,9 @@
 
     <div class="container">
       <div class="cat1">
-        <img src="./assets/cram1.jpg" alt="Product 1">
-        <h3>ADATA DDR5 16GB 5600DDR5 U-DIMM Desktop</h3>
-        <p>The DDR5-5600 U-DIMM delivers blazing frequencies of up to 5600 MHz, a major leap from the max.</p>
-        <p>Higher Frequencies
-          More Energy-Efficient
-          Improved Stability
-          Operating Voltage: 1.1V</p>
-        <button class="buy-button">Buy Now</button>
-      </div>
-
-      <div class="cat1">
         <img src="./assets/cram2.jpg" alt="Product 2">
         <h3>XPG LANCER RGB DDR5 32GB</h3>
         <p>The XPG LANCER ushers in the DDR5 era for gaming memory. Reaching frequencies of up to 6400 MT/s</p>
-        <p>New speed benchmark in gaming memory
-          Customizable RGB light effects.</p>
         <button class="buy-button">Buy Now</button>
       </div>
   
@@ -104,9 +91,6 @@
         <img src="./assets/cram3.jpg" alt="Product 3">
         <h3>Kingston 32GB 4800MT/s </h3>
         <p>Kingston offers extremely reliable, high-performance desktop memory and sells more laptop upgrade memory than anyone in the world.</p>
-        <p>32GB DDR5 Single Module
-          4800MT/s (PC5-38400)
-          DIMM </p>
         <button class="buy-button">Buy Now</button>
       </div>
   
@@ -114,21 +98,13 @@
         <img src="./assets/cram4.jpg" alt="Product 4">
         <h3>XPG LANCER RGB DDR5 32GB</h3>
         <p>The XPG LANCER ushers in the DDR5 era for gaming memory. Reaching frequencies of up to 6400 MT/s</p>
-        <p>New speed benchmark in gaming memory
-          Customizable RGB light effects
-          PMIC for power supply stability
-          On-die ECC error correction</p>
         <button class="buy-button">Buy Now</button>
       </div>
 
       <div class="cat1">
         <img src="./assets/cram5.jpg" alt="Product 4">
-        <h3>Corsair VENGEANCE 16GB (2x8GB) DDR5 DRAM </h3>
+        <h3>Corsair VENGEANCE 16GB DDR5 DRAM </h3>
         <p>ORSAIR VENGEANCE DDR5, optimized for Intel® motherboards, compact module that suits your system.</p>
-        <p>Onboard Voltage Regulation
-          Custom Intel® XMP 3.0 Profiles
-          Optimized for the latest Intel® DDR5 motherboards.
-          Solid Aluminum Heatspreader</p>
         <button class="buy-button">Buy Now</button>
       </div>
 
@@ -136,10 +112,6 @@
         <img src="./assets/cram7.jpg" alt="Product 4">
         <h3>XPG LANCER RGB DDR5 Desktop Memory 32GB </h3>
         <p>The XPG LANCER ushers in the DDR5 era for gaming memory. Reaching frequencies of up to 6000 MT/s,</p>
-        <p>New speed benchmark in gaming memory
-          Customizable RGB light effects
-          PMIC for power supply stability
-          On-die ECC error correction.</p>
         <button class="buy-button">Buy Now</button>
       </div>
 
@@ -147,9 +119,6 @@
         <img src="./assets/cram7.jpg" alt="Product 4">
         <h3>TeamGroup Elite Plus 8GB DDR5 4800MHz</h3>
         <p>Symmetrical heat sink exclusively designed for ELITE PLUS DDR5. offering comprehensive protection for the DDR5 memory module.</p>
-        <p>Simple design and comprehensive protection
-          Frequency further enhanced for upgraded performance
-          Effective power system configuration with low voltage for power reduction</p>
         <button class="buy-button">Buy Now</button>
       </div>
 
@@ -157,21 +126,13 @@
         <img src="./assets/cram8.jpg" alt="Product 4">
         <h3>XPG SPECTRIX D35G DDR4 8GB 3600MHz </h3>
         <p>SPECTRIX D35G's composed and understated triangular outline is specifically designed for gamers with unique personalities</p>
-        <p>Top Quality RAM for High Durability
-          RGB Your Way
-          Create Personalized Lightshow with XPG Prime
-          Works with the Latest AMD Platforms | Supports Intel® XMP 2.0</p>
         <button class="buy-button">Buy Now</button>
       </div>
 
       <div class="cat1">
         <img src="./assets/cram9.jpg" alt="Product 4">
-        <h3>XPG SPECTRIX D35G DDR4 16GB (8GB x 2) 3600MHz</h3>
+        <h3>XPG SPECTRIX D35G DDR4 16GB 3600MHz</h3>
         <p>SPECTRIX D35G's composed and understated triangular outline is specifically designed for gamers with unique personalities. </p>
-        <p>Top Quality RAM for High Durability
-          RGB Your Way
-          Create Personalized Lightshow with XPG Prime
-          Works with the Latest AMD Platforms | Supports Intel® XMP 2.0</p>
         <button class="buy-button">Buy Now</button>
       </div>
     </div>
@@ -183,13 +144,13 @@
         </div>
   
         <div class="footer-section">
-          <h3>NAME</h3>
+          <h3>MADE BY</h3>
           <span>SAJID ALI</span>
         </div>
   
         <div class="footer-section">
           <h3>Contact Us</h3>
-          <span>Email: greatsajidali709@gmail.com</span>
+          <span>Email: greatsajidail709@gmail.com</span>
           <span>Phone: +92 3132541910</span>
         </div>
       </div>
