--- a/pd5.html
+++ b/pd5.html
@@ -16,10 +16,10 @@
 
     <!-- Navbar Start -->
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2c2e3c;">
       <div class="container-fluid d-flex ">
        <div>
-          <a class="navbar-brand" href="#"><img src="./assets/logo.png" alt="" width="80px"></a>
+          <a class="navbar-brand" href="#"><img src="./assets/logo.jpg" alt="" width="60px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
        </div>
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-weight: bold;">
           <ul class="navbar-nav me-auto mb-2  mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html" style="color: rgb(0, 0, 0);">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html" style="color: white;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html" style="color: rgb(0, 0, 0);">Products</a>
+              <a class="nav-link" href="./products.html" style="color: white;">Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Category
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -44,7 +44,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(0, 0, 0);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                 Brands
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,36 +55,40 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./compare.html" style="color: rgb(0, 0, 0);">Compare</a>
+              <a class="nav-link" href="./compare.html" style="color: white;">Compare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html" style="color: rgb(0, 0, 0);">About Us</a>
+              <a class="nav-link" href="./about.html" style="color: white;">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./support.html" style="color: rgb(0, 0, 0);">Support</a>
+              <a class="nav-link" href="./support.html" style="color: white;">Support</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html" style="color: rgb(0, 0, 0);">Contact Us</a>
+              <a class="nav-link" href="./contact.html" style="color: white;">Contact Us</a>
             </li>
           </ul>
           <div>
-            <a href="./signup.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Sign up</button></a>
-              <a href="./login.html"><button style="background-color: #4CAF50; border-radius: 10px; color: white; border: none;" class="p-2">Login</button></a>
+            <a href="./signup.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Sign up</button></a>
+            <a href="./login.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Login</button></a>
               
           </div>
         </div>
       </div>
-    </nav> 
+    </nav>
     <h1 class="pd">Product Detail</h1>
   <div class="pmain">
   <div class="pm">
     <img src="./assets/gpu11.png" alt="Product Image">
+    <div class="data">
     <h1>RTX 4090 GPU</h1>
     <p>The ROG Strix GeForce RTX® 4090 brings a whole new meaning to going with the flow. Inside and out, every element of the card gives the monstrous GPU headroom.
     </p>
     <p>Price: Rs:490,500</p>
+  </div>
+  <div class="btns">
     <a href="#"><button class="add-to-cart-btn">Buy Now</button></a>
     <a href="1.docx" download><button class="downp" >Downlaod</button></a>
+  </div>
   </div>
   <div class="loca">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.0170064238937!2d67.07182317595239!3d24.863268745144048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33ea3db108f41%3A0x42acc4507358b160!2sAptech%20Learning%2C%20Shahrah%20e%20Faisal%20Center!5e0!3m2!1sen!2s!4v1707374077472!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -165,13 +169,13 @@
       </div>
 
       <div class="footer-section">
-        <h3>NAME</h3>
+        <h3>MADE BY</h3>
         <span>SAJID ALI</span>
       </div>
 
       <div class="footer-section">
         <h3>Contact Us</h3>
-        <span>Email: greatsajidali709@gmail.com</span>
+        <span>Email: greatsajidail709@gmail.com</span>
         <span>Phone: +92 3132541910</span>
       </div>
     </div>
