--- a/compare.html
+++ b/compare.html
@@ -6,12 +6,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OceanGate Limited</title>
 
-  <link rel="stylesheet" href="compare.css">
+  <link rel="stylesheet" href="./css/compare.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
 </head>
 <body>
   
+  <!-- Navbar Start -->
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2c2e3c;">
+    <div class="container-fluid d-flex ">
+     <div>
+        <a class="navbar-brand" href="#"><img src="./assets/logo.jpg" alt="" width="60px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+     </div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-weight: bold;">
+        <ul class="navbar-nav me-auto mb-2  mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html" style="color: white;">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./products.html" style="color: white;">Products</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+              Category
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./cram.html">Ram</a></li>
+              <li><a class="dropdown-item" href="./chdd.html">Hard Drives</a></li>
+              <li><a class="dropdown-item" href="./cmemorycard.html">Memory card</a></li>
+              <li><a class="dropdown-item" href="./cusb.html">USB Drives</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+              Brands
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./bsamsung.html">Sumsung</a></li>
+              <li><a class="dropdown-item" href="./bhikvision.html">HikVision</a></li>
+              <li><a class="dropdown-item" href="./bsony.html">Sony</a></li>
+              <li><a class="dropdown-item" href="./bwd.html">WD</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./compare.html" style="color: white;">Compare</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html" style="color: white;">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./support.html" style="color: white;">Support</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html" style="color: white;">Contact Us</a>
+          </li>
+        </ul>
+        <div>
+          <a href="./signup.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Sign up</button></a>
+            <a href="./login.html"><button style="background-color: #050a44; border-radius: 8px; color: white; border: none;" class="p-2">Login</button></a>
+            
+        </div>
+      </div>
+    </div>
+  </nav> 
+
 <div class="comparetext"><h1>Product Compare</h1></div>
 <div class="container">
   <select class="form-control" id="categoryIdSelect" onchange="loadProducts()">
@@ -84,7 +145,8 @@
     </div>  
 </div>
 
-  <script src="./data.js"></script>
-  <script src="./main.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
